@@ -312,7 +312,6 @@ public enum RenderingHandler {
 
         registerItemRenderer(BASIC_CIRCUIT, "basic_circuit");
         registerItemRenderer(ADVANCED_CIRCUIT, "advanced_circuit");
-        registerItemRenderer(IRON_NUGGET, "iron_nugget");
 
         registerItemRenderer(GYPSUM_POWDER, "gypsum_powder");
 
