@@ -1,18 +1,0 @@
-{
-  "type": "minecraft:crafting_shaped",
-  "group": "jurassicraft:iron_nugget",
-  "pattern": [
-    "A"
-  ],
-  "key": {
-    "A": {
-      "item": "minecraft:iron_ingot",
-      "data": 0
-    }
-  },
-  "result": {
-    "item": "jurassicraft:iron_nugget",
-    "data": 0,
-    "count": 9
-  }
-}
